--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--BS--->
     <link rel="stylesheet" href="scss/bs-scss/bootstrap.scss">
 
-    <!--link rel="stylesheet" href="css/estilos.css"-->
+    <!--css-->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
@@ -89,7 +89,7 @@
 
         </main>
         <footer class="footer box">
-            <h3>plant&care</h3>
+            <h3>plants&care</h3>
             <a></a>
             <p>© 2022 Desarollado por SimocaStudio</p>
         </footer>
