--- a/index.html
+++ b/index.html
@@ -56,9 +56,19 @@
                 <p>Tus plantas te lo agradecerán.</p>
             </hero>
 
+            <section id="contenedor-productos" class="container-fluid">
+                <div class="row">
+                    <div class="col-xs-6 col-sm-3 col-md-2">
+                        <article class="cards"> </article>
+                    </div>
+                </div>
+            </section>
+
+
             <section class="store box">
                 <h2>Tienda</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna.</p>
                 <button>Quiero ver más>>></button>
                 <div class="store_photos image">
                     <!--<img src="images/img_2.jpg" alt="potus">
@@ -78,13 +88,14 @@
 
             <section class="game box">
                 <h2>Lúdico</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna.</p>
                 <button>Quiero ver más>>></button>
                 <div>
                     <!--<img src="icons/card.png" alt="">
                     <img src="icons/research.png" alt="">-->
                 </div>
-                
+
             </section>
 
         </main>
@@ -95,9 +106,9 @@
         </footer>
     </div>
     <!--BS-JS-->
-    <script src="js/js_bs/bootstrap.js"></script>
+    <script defer src="js/js_bs/bootstrap.js"></script>
     <!--link javaScript-->
-    <script src="js/code.js"></script>
+    <script defer src="js/code.js"></script>
 
 </body>
 
