--- a/index.html
+++ b/index.html
@@ -56,13 +56,19 @@
                 <p>Tus plantas te lo agradecerán.</p>
             </hero>
 
-            <section id="contenedor-productos" class="container-fluid">
+
+
+
+            <article id="cards" class="row"> </article>
+
+
+            <!--<section id="contenedor-productos" class="container-fluid">
                 <div class="row">
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <article class="cards"> </article>
+                        <article id="cards" class="row"> </article>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
 
             <section class="store box">
