--- a/pages/Lúdico.html
+++ b/pages/Lúdico.html
@@ -46,11 +46,14 @@
         </header>
 
         <main class="main">
-            <h1>TIENDA</h1>
+            <h1>LÚDICO</h1>
 
-            <article id="cards" class="row"> </article>
             <section id="contenedor-productos" class="container-fluid">
-                <article id="cards" class="row"> </article>
+                <article id="cartasTarot" class="row"> </article>
+            </section>
+
+            <section id="contenedor-productos" class="container-fluid">
+                <article id="cartasDorso" class="row"> </article>
             </section>
 
 
