--- a/pages/Lúdico.html
+++ b/pages/Lúdico.html
@@ -46,12 +46,13 @@
         </header>
 
         <main class="main">
-
-            <section class="juegoTarot">
-                <h1>Let's play</h1>
-                <article id="cartasTarot"></article>
+            <h1>Let's play</h1>
+            <section id="juegoTarot">
+                <div id="cartasTarot" class="background"></div>
+                <button id="sacarCarta">press</button>
             </section>
         </main>
+
 
         <footer class="footer box">
             <h3>plants&care</h3>
