tart+DOM+evento - tiendaDOM

--- a/pages/Lúdico.html
+++ b/pages/Lúdico.html
@@ -45,11 +45,14 @@
             </nav>
         </header>
 
-        <main class="main">
+
+
+    <main class="main">
             <h1>Let's play</h1>
-            <section id="juegoTarot">
-                <div id="cartasTarot" class="background"></div>
-                <button id="sacarCarta">press</button>
+            <section class=" container-fluid juego">
+                <div id="cartasTarot"></div>
+                <h2>haz click y descubre tu destino</h2>
+                <button id="sacarCarta"><img src="../icons/boton.png" alt="botón para presionar"></button>
             </section>
         </main>
 
