--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
-                            <a class="nav-link" href="#">Lúdico</a>
-                            <a class="nav-link" href="#">Cuidados</a>
-                            <a class="nav-link" href="#">Nosotros</a>
-                            <a class="nav-link" href="#">Tienda</a>
-                            <a class="nav-link" href="#">Acceso</a>
+                            <a class="nav-link" href="pages/ludico.html">Lúdico</a>
+                            <a class="nav-link" href="pages/cuidados.html">Cuidados</a>
+                            <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="pages/tienda.html">Tienda</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </div>
                     </div>
                 </div>
