--- a/pages/cuidados.html
+++ b/pages/cuidados.html
@@ -25,7 +25,7 @@
 <body>
     <div class="grid__container">
         <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light  navbar-custom">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -41,6 +41,10 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </div>
                     </div>
+                       <!--boton del carrito-->
+                       <button id="toggleMyModal" type="button" class="btn buttonStyles" data-bs-toggle="modal"
+                       data-bs-target="#exampleModal">Ver mi carrito <i class="bi bi-bag-check-fill"></i>
+                   </button>
                 </div>
             </nav>
         </header>
