--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -25,13 +25,14 @@
 <body>
     <div class="grid__container">
         <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light  navbar-custom">
                 <div class="container-fluid">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link" href="ludico.html">Lúdico</a>
@@ -41,6 +42,10 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </div>
                     </div>
+                    <!--boton del carrito-->
+                    <button id="toggleMyModal" type="button" class="btn buttonStyles" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Ver mi carrito <i class="bi bi-bag-check-fill"></i>
+                    </button>
                 </div>
             </nav>
         </header>
@@ -48,6 +53,66 @@
         <main class="main">
             <h1>TIENDA</h1>
 
+            <!-- Modal pop up objetos en carrito-->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Nombre</th>
+                                            <th scope="col">Cantidad</th>
+                                            <th scope="col">Precio</th>
+                                            <th scope="col">Total</th>
+                                            <th scope="col"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="items"></tbody>
+                                    <tfoot>
+                                        <tr id="footer">
+                                            <th scope="row" colspan="6">Carrito vacío &#127793 Comienza a comprar tus
+                                                plantas!</th>
+                                        </tr>
+                                    </tfoot>
+                                </table>
+                                <div class="row" id="cards"></div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn buttonStyles">Ir a pagar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            <!--------cards productos------->
             <article id="cards" class="row"> </article>
             <section id="contenedor-productos" class="container-fluid">
                 <article id="cards" class="row"> </article>
