juego tarot + css

--- a/pages/ludico.html
+++ b/pages/ludico.html
@@ -50,39 +50,20 @@
         </header>
 
 
-
         <main class="main">
-            <h1>Let's play</h1>
-            <section class=" container-fluid juego">
-                <div id="cartasTarot"></div>
-                <h2>haz click y descubre tu destino</h2>
-                <button id="sacarCarta"><img src="../icons/boton.png" alt="botón para presionar"></button>
+            <section class="juegoDeTarot">
+                <h1>Lúdico</h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
+                    ut laoreet dolore magna.</p>
+
+                <div id="cartasTarot">
+                    <img src="../icons/card_bk.png" class="cartaDorso" alt="carta de juego">
+                    <h2>haz click y descubre tu destino</h2>
+                    <button id="sacarCarta"><img src="../icons/boton.png" alt="botón para presionar"></button>
+                </div>
+
             </section>
         </main>
-
-        <section class="boxConImagen box game">
-            <h2>Lúdico</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt
-                ut laoreet dolore magna.</p>
-            <div class="image">
-                <div id="cartasTarot">
-                    <img class="images" src="../icons/card_bk.png" alt="carta de juego">
-                </div>
-                
-            </div>
-            <h2>haz click y descubre tu destino</h2>
-            <button id="sacarCarta"><img src="../icons/boton.png" alt="botón para presionar"></button>
-        </section>
-
-        <!--<main class="main">
-            <h1>Let's play</h1>
-            <section class=" container-fluid juego">
-                <div id="cartasTarot"></div>
-                <h2>haz click y descubre tu destino</h2>
-                <button id="sacarCarta"><img src="../icons/boton.png" alt="botón para presionar"></button>
-            </section>
-        </main>-->
-
 
         <footer class="footer box">
             <h3>plants&care</h3>
