--- a/pages/ludico.html
+++ b/pages/ludico.html
@@ -74,7 +74,7 @@
     <!--BS-JS-->
     <script defer src="../js/js_bs/bootstrap.js"></script>
     <!--link javaScript-->
-    <script defer src="../js/code.js"></script>
+    <script defer src="../js/ludico.js"></script>
 
 </body>
 
