--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -113,6 +113,7 @@
     <script defer src="../js/js_bs/bootstrap.js"></script>
     <!--link javaScript-->
     <script defer src="../js/tienda.js"></script>
+    <script defer src="../js/script.js"></script>
 
 </body>
 
