--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -97,10 +97,26 @@
 
             <!--------cards productos------->
 
-
             <section id="cards" class="row"> </section>
+ <!--------LISTA DE CARRITO------->
+            <div>
+                <h4>Tu carrito:</h4>
 
-
+                <div id="ok"></div><!-------OK CONFIRMA DE PRODUCTO------->
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Precio</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tablabody">
+                        <!-- aqui tabla carrito -->
+                    </tbody>
+                </table>
+            </div>
+            
         </main>
 
         <footer class="footer box">
