--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -67,7 +67,7 @@
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th scope="col">ID</th>
+                                            <th scope="col">ISBN</th>
                                             <th scope="col">Nombre</th>
                                             <th scope="col">Cantidad</th>
                                             <th scope="col">Precio</th>
