--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -79,7 +79,7 @@
                                     </tbody>
                                     <tfoot>
                                         <tr id="footer">
-                                            <th scope="row" colspan="6">Carrito vacío &#127793 Comienza a comprar tus
+                                            <th scope="row" colspan="6">&#127793 Comienza a disfrutar tus
                                                 plantas!</th>
                                         </tr>
                                     </tfoot>
@@ -96,7 +96,8 @@
                 </div>
             </div>
             <h1>TIENDA</h1>
-            <!--------cards productos------->
+
+            <!--------cards de productos------->
 
             <div class="container-fluid">
                
@@ -106,26 +107,6 @@
                 </section>
             </div>
           
-
-            <!--------LISTA DE CARRITO------->
-            <div>
-                <h4>Tu carrito:</h4>
-
-                <div id="ok"></div>
-                <!-------OK CONFIRMA DE PRODUCTO------->
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">ISBN</th>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Precio</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablabody">
-                        <!-- aqui tabla carrito -->
-                    </tbody>
-                </table>
-            </div>
 
         </main>
 
@@ -140,6 +121,7 @@
     <!--link javaScript-->
     <script defer src="../js/tienda.js"></script>
     <script defer src="../js/prueba.js"></script>
+    <!--<script defer src="../js/script.js"></script>-->
 
 </body>
 
